# tarkov-map

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: branch-deploy.yml  deploy.yml  unlock-on-merge.yml
scripts/: cache-api-data.mjs  critical.mjs
src/: App.js  index.js  inject.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_watcher.rs  main.rs
src/components/menu/: index.css  index.js  settings.js
src/features/settings/: settingsSlice.js
src/pages/map/: customize.js  index.js
